--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=prometeo
+# PostgreSQL with Neon.tech configuration
+spring.datasource.url=jdbc:postgresql://${NEON_HOST}/${NEON_DATABASE}
+spring.datasource.username=${NEON_USERNAME}
+spring.datasource.password=${NEON_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+# JPA configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
