--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,13 @@
             <scope>runtime</scope>
         </dependency>
         <!-- Quitamos MongoDB por simplicidad y evitar conflictos -->
+
+        <!-- OkHttp para Hugging Face API -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.10.0</version>
+        </dependency>
         
         <dependency>
             <groupId>org.springframework.boot</groupId>
