--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,10 @@
             <artifactId>dotenv-java</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
     
     <dependencyManagement>
