feature: Transfer Hugging Face token to an OpenAI connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Hugging Face configuration
-huggingface.api.token=${HUGGING_FACE_TOKEN}
-huggingface.model.url=https://api-inference.huggingface.co/models/sentence-transformers/all-MiniLM-L6-v2
+# OpenAi configuration
+openai.api.key=sk-XXXXXXXXXXXXXXXXXXXXXXXXXXXX
+openai.api.url=https://api.openai.com/v1/chat/completions
