feat: add succesfully integration with open ia api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # OpenAi configuration
-openai.api.key=sk-XXXXXXXXXXXXXXXXXXXXXXXXXXXX
-openai.api.url=https://api.openai.com/v1/chat/completions
+openai.api.key= ${OPEN_AI_TOKEN}
+openai.api.url=${OPEN_AI_MODEL}
