--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # OpenAi configuration
 openai.api.key= ${OPEN_AI_TOKEN}
 openai.api.url=${OPEN_AI_MODEL}
+
+# SSL configuration
+spring.datasource.hikari.properties.ssl=true
+spring.datasource.hikari.properties.sslfactory=org.postgresql.ssl.NonValidatingFactory
+
+# Server configuration
+server.port=8081
