--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,17 +1,16 @@
-# Test database configuration using H2 in-memory database
+# Configuración para pruebas
+spring.main.banner-mode=off
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Configuración de H2 en memoria para pruebas
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
-# JPA configuration for tests
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# Deshabilitar características no necesarias para pruebas
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
-# Disable OpenAI for tests
-openai.api.key=test-key
-openai.api.url=test-url
-
-# Server configuration
-server.port=8081
+# Desactivar seguridad para pruebas si es necesario
+spring.security.enabled=false
