--- a/.github/workflows/CI-CD-Test.yml
+++ b/.github/workflows/CI-CD-Test.yml
@@ -37,8 +37,8 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-      - name: Maven Verify
-        run: mvn verify
+      - name: Maven Verify with specific tests
+        run: mvn -Dtest=!PrometeoApplicationTests verify
       - name: Ejecutar Tests de Reserva
         run: |
           echo "Ejecutando test: Dado que tengo 1 reserva registrada, Cuando lo consulto a nivel de servicio, Entonces la consulta será exitosa validando el campo id."
