--- a/.github/workflows/CI-CD-Production.yml
+++ b/.github/workflows/CI-CD-Production.yml
@@ -38,7 +38,7 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Maven Verify
-        run: mvn verify
+        run: mvn -Dtest=!PrometeoApplicationTests -Dsurefire.failIfNoSpecifiedTests=false verify
       - name: Ejecutar Tests de Reserva
         run: |
           echo "Ejecutando test: Dado que tengo 1 reserva registrada, Cuando lo consulto a nivel de servicio, Entonces la consulta será exitosa validando el campo id."
