--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.datasource.hikari.properties.ssl=true
 spring.datasource.hikari.properties.sslfactory=org.postgresql.ssl.NonValidatingFactory
 
 # Server configuration, comentado porque no es necesario. 
-# server.port=8081 
+server.port=8081 
