--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,10 @@
         <maven.compiler.release>17</maven.compiler.release>
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.source>17</maven.compiler.source>
-        <sonar.projectKey>elysium</sonar.projectKey>
-        <sonar.projectName>elysium</sonar.projectName> 
-        <sonar.host.url>http://localhost:9000</sonar.host.url>
+        <sonar.organization>ander-ECI</sonar.organization>
+        <sonar.projectKey>Prometeo-Back</sonar.projectKey>
+        <sonar.projectName>Prometeo-Back</sonar.projectName> 
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <sonar.coverage.exclusions>src//configurators/*</sonar.coverage.exclusions>
         <spring-cloud.version>2024.0.1</spring-cloud.version>
@@ -57,7 +58,21 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
-        
+
+        <!-- PDFBox -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.30</version>
+        </dependency>
+
+        <!-- Apache POI para Excel -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.3</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
