fix: deployment auth

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,5 @@ openai.api.url=${OPEN_AI_MODEL}
 spring.datasource.hikari.properties.ssl=true
 spring.datasource.hikari.properties.sslfactory=org.postgresql.ssl.NonValidatingFactory
 
-# Server configuration, comentado porque no es necesario. 
-server.port=8081 
+# Server configuration, comentado porque no es necesario.
+#server.port=8081
