fix: deployment auth-headers

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+server.forward-headers-strategy=native
 
 # Deshabilitar características no necesarias para pruebas
 spring.jpa.show-sql=false
